$Id$

History for IMDBPHP2
====================

v2.0.7
-------------------
! site changes again: fixed imdb_person:name (tnx to GeorgeFive and Qvist)

v2.0.6 (08.07.2011)
-------------------
! next IMDB site changes: ratings
! imdb_person filmographies: quarters in years, e.g. 1924/II, lead to empty year
* imdb::awards(): minor adjustments by Qvist
! imdb_movielist: fixed the listing methods (were all broken by IMDB site changes some time ago)
+ movies (imdb+pilot): Added new method languages_detailed() to get detailed lang info (name, code and comment of languages used)
+ imdb::episodes(): Result array now also includes season and episode (numbers)
+ movie classes: Added new method aspect_ratio to obtain the screen aspect ratio

v2.0.5 (25.05.2011)
-------------------
! IMDB-Link for person search in demo was wrong
+ movie class: new method yearspan() for e.g. serials spanning multiple production years
! IMDB site changes broke actors filmographies, quotes, user comments, trivia, top250
* adaption to imdb::storyline() as suggested by an anonymous user

v2.0.4 (28.12.2010)
-------------------
! mdb_request.class.php ignored the IMDBPHP_CONFIG constant - fixed
! they did it again - so imdb::comment_split() was broken
! imdb photo stuff was broken
+ runtimes and genres know have an additional source as fallback
! imdb::votes() was broken due to site changes
! imdb::seasons() always returned 1 (if there were seasons) for IMDB switched order
* cleaned up imdb::prodNotes() result
* cleaning up double-paragraphs in imdb::plotoutline()
! person.php linked back to imdb.php instead of movie.php

v2.0.3 (17.10.2010)
-------------------
! some after-fixes for the last "big run" include imdb methods plotoutline(),
  runtime_all()
! same for imdb_person::name()
* imdb::plotoutline() was taken from storyline with the recent changes - fixed it up
+ but since we had a working storyline, that method was added as storyline()